<resources>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="allowed_campuses">
        <item>ARASOF Nasugbu Campus</item>
        <item>Balayan Campus</item>
        <item>JPLPC Malvar Campus</item>
        <item>Lemery Campus</item>
        <item>Lipa Campus</item>
        <item>Lobo Campus</item>
        <item>Mabini Campus</item>
        <item>Pablo Borbon Campus I</item>
        <item>Pablo Borbon Campus II</item>
        <item>Rosario Campus</item>
        <item>San Juan Campus</item>
        <!-- Add more campuses here -->
    </string-array>
    <string-array name="NSTP">
        <item>CWTS</item>
        <item>LTS</item>
        <item>ROTC</item>
        <item>ROTC&amp;CWTS</item>
        <item>ROTC&amp;LTS</item>
        <item>CWTS&amp;LTS</item>
        <item>ALL</item>

        <!-- Add more campuses here -->
    </string-array>
    <string name="app_name">CiviCall</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="long_text_description">
        This is your long text content.
    </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="long1">

"Civic engagement can be an enriching journey, but it's essential to embark on it with purpose and a hunger for knowledge!"
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Disaster Response String -->
    <string name="typhoon">Typhoon</string>
    <string name="earthquake">Earthquake</string>
    <string name="vulcan">Volcanic Eruption</string>
    <string name="flood">Floods</string>
    <string name="landslide">Landslide</string>
    <string name="tsunami">Tsunami</string>
    <string name="heat">Droughts</string>
    <string name="tropicaldisease">Tropical Disease</string>
    <string name="terrorism">Terrorism</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comments_forums">CommentsActivityForums</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="app_name_chatx">ChatX</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user_click_here_to_register">New User? Click here to register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="signup">Signup</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="name">Name</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="how_s_you_feeling_today">How\'s You feeling Today?</string>
    <string name="create_post_floating_action_button">Create Post Floating Action Button</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="floating_action_button_chatrooms">floating action button chatrooms</string>
    <string name="enter_message">Enter Message</string>
    <string name="username">Username</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="title_activity_civic_engagement">CivicEngagementActivity</string>
    <string name="title_activity_participant_tips">ParticipantTips</string>
    <string name="amplify">Amplify Your Voice: Civic Engagement Tactics for Impact</string>
    <string name="yourcivicjourney">Your Civic Journey: A Roadmap to Successful Engagement</string>
    <string name="civic101">Civic Engagement 101: A Guide to Getting Started`</string>
    <string name="civiclead">Skills and Qualities of a Successful Community Engagement Leader</string>
    <string name="navigatecivic">Tips Navigating Civic Engagement: Dos and Don\'ts</string>
    <string name="wanttoparti">Tips for the students who want \nto participate in Civic Engagement</string>
    <string name="makingthemost">Making the Most of your Civic Engagement Experience</string>
    <string name="LastingImpact">Civic Engagement Beyond Voting: How to Make a Lasting Impact</string>
    <string name="DigitalAgeCivic">Digital Age Civic Engagement: Harnessing Social Media for Change</string>
    <string name="YouthEmpowerment">Youth Empowerment in Civic Engagement: Shaping Tomorrow\'s Leaders</string>
    <string name="CivicEngagementandAdvocacy">Civic Engagement and Advocacy: Making Your Voice Heard on Key Issues</string>
    <string name="agreement">Youth Empowerment in Civic Engagement: Shaping Tomorrow\'s Leaders</string>
</resources>